examples/good/12-StaticBind.tms
void main() {
  int x = 1;

  int y() {
    printInt(x);
    return x;
  }

  int x = 2;
  printInt(y());

  return;
}