examples/bad/06-NoReturn.tms
int x(int y) {
  y++;
}

void main () {
  x(1);
  return;
}